--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "start:server": "json-server -p 4000 --watch db.json"
   },
@@ -50,6 +50,12 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.3"
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "babel-jest": "^27.0.2",
+    "jest": "^27.0.4",
+    "json-server": "^0.16.3",
+    "react-test-renderer": "^17.0.2"
   }
 }
