--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
+    "@testing-library/react-hooks": "^7.0.0",
     "babel-jest": "^27.0.2",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^27.0.4",
+    "jest-watch-typeahead": "^0.6.4",
     "json-server": "^0.16.3",
     "react-test-renderer": "^17.0.2"
   }
