--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,12 @@ orbs:
   # See here https://circleci.com/docs/2.0/env-vars/#setting-an-environment-variable-in-a-project 
 
 workflows:
-  sample:
+  deploy:
     jobs:
       - node/test:
           version: '15.1'
           # after the node/test job completes, build the dist packages and save them to a workspace
           post-steps:
-            - run: npm install
-            - run: npm run build
+            - run: yarn install
+            - run: yarn run build
             
