--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,3 +12,12 @@ jobs:
           steps:
             - run: yarn install
             - run: yarn run build
+            - run:
+                name: Config git
+                command: |
+                  git config user.email "gianglevan94@gmail.com"
+                  git config user.name "giangg"
+            - add_ssh_keys:
+                fingerprints:
+                  - "73:c4:84:37:cc:e9:9d:55:d7:f2:22:6b:e2:1c:64:ba"
+            - run: yarn run deploy
